2008-06-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/producers/wms/wms.py:
	Update to the latest flumotion import changes

2008-05-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wmv/admin_gtk.py:
	Update to latest flumotion API

2008-05-08  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Update to the latest wizard API.

2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.xml:
	* flumotion/component/encoders/wmv/wmv.xml:
	  Add description for bitrate.

2008-05-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Remove redundant get_next method.
	Update the rest of the API to the latest flumotion changes.

2008-04-17  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	* pkg/debian-common/rules:
	* pkg/ubuntu-gutsy/changelog:
	* pkg/ubuntu-gutsy/control:

	Add initial ubuntu gutsy package

2008-04-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wmv/wmv-wizard.glade:
	  Add kbit/s label

2008-03-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Mark the plugins as implementing IEncoderPlugin

2008-03-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/wma/wma_wizard.py:
	* flumotion/component/encoders/wmv/wmv_wizard.py:
	Remove GPL headers

2008-03-04  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	  Rename a packet type based on the documentation from MS.
	* flumotion/component/producers/wms/wms.py:
	  Note that MS now has docs available.

2008-02-26  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.py: