@@ -1,3 +1,10 @@
+2008-06-04  Arek Korbik  <arkadini@gmail.com>
+
+	* flumotion/component/producers/wms/wms.py:
+	* flumotion/component/producers/wms/wms.xml:
+	Add quickly a way to receive WME streams published through a
+	WindowsMedia server.
+
 2008-06-04  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/encoders/wmv/wmv.py:
